Searching Earthquake and Filtering Data/SearchingEarthquakeDataStarterProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\COURSERA\16. Java Programming Principles of Software Design\Week 1\SearchingEarthquakeDataStarterProgram
-d
D:\COURSERA\16. Java Programming Principles of Software Design\Week 1\SearchingEarthquakeDataStarterProgram\doc
-encoding
UTF-8
-charset
UTF-8
D:\COURSERA\16. Java Programming Principles of Software Design\Week 1\SearchingEarthquakeDataStarterProgram\LargestQuakes.java
<---- end of javadoc command ---->
Loading source file D:\COURSERA\16. Java Programming Principles of Software Design\Week 1\SearchingEarthquakeDataStarterProgram\LargestQuakes.java...
D:\COURSERA\16. Java Programming Principles of Software Design\Week 1\SearchingEarthquakeDataStarterProgram\LargestQuakes.java:24: error: <identifier> expected
            if(qe.){
                  ^
1 error
